force-app/main/default/objects/Order_Line_Item__c/fields/CustomOrder__c.field-meta.xml
<CustomField>
    <fullName>CustomOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CustomOrder</label>
    <referenceTo>CustomOrder__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>