force-app/main/default/objects/Order_Line_Item__c/fields/CustomProduct__c.field-meta.xml
<CustomField>
    <fullName>CustomProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomProduct</label>
    <referenceTo>CustomProduct__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>